# polar-rs

./: .gitattributes  Cargo.toml  README.md  flake.nix
.github/workflows/: update.yml
docs/: ActiveSubscriptions.md  ActiveUserByEvent.md  Address.md  AddressDict.md  AddressInput.md  Aggregation.md  AggregationFunction.md  AlreadyActiveSubscriptionError.md  AlreadyCanceledSubscription.md  Amount.md  AttachedCustomField.md  AttachedCustomFieldCreate.md  AuthorizeOrganization.md  AuthorizeResponseOrganization.md  AuthorizeResponseUser.md  AuthorizeUser.md  AverageOrderValue.md  AverageRevenuePerUser.md  Benefit.md  BenefitCreate.md  BenefitCustom.md  BenefitCustomCreate.md  BenefitCustomCreateProperties.md  BenefitCustomProperties.md  BenefitCustomSubscriber.md  BenefitCustomSubscriberProperties.md  BenefitCustomUpdate.md  BenefitCycledEvent.md  BenefitDiscord.md  BenefitDiscordCreate.md  BenefitDiscordCreateProperties.md  BenefitDiscordProperties.md  BenefitDiscordSubscriber.md  BenefitDiscordSubscriberProperties.md  BenefitDiscordUpdate.md  BenefitDownloadables.md  BenefitDownloadablesCreate.md  BenefitDownloadablesCreateProperties.md  BenefitDownloadablesProperties.md  BenefitDownloadablesSubscriber.md  (+605 more)
src/apis/: benefit_grants_api.rs  benefits_api.rs  checkout_links_api.rs  checkouts_api.rs  clients_api.rs  configuration.rs  custom_fields_api.rs  customer_meters_api.rs  customer_portal_api.rs  customer_seats_api.rs  customer_session_api.rs  customer_sessions_api.rs  customers_api.rs  default_api.rs  discounts_api.rs  downloadables_api.rs  events_api.rs  files_api.rs  license_keys_api.rs  mcp_api.rs  meters_api.rs  metrics_api.rs  mod.rs  oauth2_api.rs  orders_api.rs  organizations_api.rs  payments_api.rs  products_api.rs  public_api.rs  refunds_api.rs  seats_api.rs  subscriptions_api.rs  wallets_api.rs  webhook_verify.rs  webhooks_api.rs
(+634 files in other folders)
