[package]
name = "polar-sdk"
version = "0.1.0-alpha.2"
edition = "2021"
description = "Polar SDK for Rust"
license = "MIT"
repository = "https://github.com/junhsss/polar-rs"
documentation = "https://docs.rs/polar-rs"
readme = "README.md"
keywords = ["polar", "stripe", "subscriptions"]
categories = ["api-bindings"]


[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "0.12.24", features = [
  "http2",
  "json",
  "rustls-tls",
], default-features = false }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
