[package]
name = "polar-sdk"
version = "0.1.0-alpha.2"
edition = "2021"
description = "Polar SDK for Rust"
license = "MIT"
repository = "https://github.com/junhsss/polar-rs"
documentation = "https://docs.rs/polar-rs"
readme = "README.md"
keywords = ["polar", "stripe", "subscriptions"]
categories = ["api-bindings"]

[lints.clippy]
# The JSON payloads can vary in size by a lot, but we don't think that means some should be wrapped in Box and others shouldn't.
large-enum-variant = "allow"

[dependencies]
axum = "0.8.6"
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
http = "1.3.1"
reqwest = { version = "0.12.24", features = [
  "http2",
  "json",
  "rustls-tls",
], default-features = false }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
serde_repr = "0.1.20"
serde_with = "3.15.1"
standardwebhooks = "1.0.1"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
url = "2.5.7"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
